# wasm-bodge

./: .gitignore  CHANGELOG.md  Cargo.toml  HACKING.md  LICENSE  README.md  wasm-bodge.md
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml  release-binaries.yml
docker-build/: .dockerignore  Dockerfile  README.md  build-in-docker.sh  build.sh
src/: config.rs  main.rs
tests/: package-lock.json  packaging.rs
tests/fixtures/test-crate/: Cargo.toml  package.json
tests/puppeteer_runner/: check.mjs  package-lock.json  package.json
tests/templates/iife_script/: index.html  package.json  test.cjs
tests/templates/node_cjs_cross_init/: package.json  test.cjs
tests/templates/node_cjs_fullfat/: package.json  test.cjs
tests/templates/node_cjs_slim/: package.json  test.cjs
tests/templates/node_cjs_slim_debug/: package.json  test.cjs
tests/templates/node_esm_cross_init/: package.json  test.mjs
tests/templates/node_esm_debug/: package.json  test.mjs
tests/templates/node_esm_debug_slim/: package.json  test.mjs
tests/templates/node_esm_fullfat/: package.json  test.mjs
tests/templates/node_esm_slim/: package.json  test.mjs
tests/templates/node_esm_slim_debug/: package.json  test.mjs
tests/templates/vite_build_fullfat/: package.json
tests/templates/vite_build_slim/: package.json  vite.config.js
tests/templates/vite_build_slim_debug/: main.js
tests/templates/vite_dev_fullfat/: index.html  main.js  package.json
tests/templates/vite_dev_slim/: main.js  package.json
tests/templates/vite_dev_slim_debug/: package.json
(+24 files in other folders)
